@@ -24,15 +24,20 @@ import org.neo4j.gds.betweenness.BetweennessCentralityStatsProc;
 import org.neo4j.gds.betweenness.BetweennessCentralityStreamProc;
 import org.neo4j.gds.betweenness.BetweennessCentralityWriteProc;
 import org.neo4j.gds.catalog.GraphCreateProc;
+import org.neo4j.gds.functions.AsNodeFunc;
 
-import java.util.Arrays;
 import java.util.List;
 
 class BetweennessCentralityDocTest extends DocTestBase {
 
     @Override
-    List<Class<?>> procedures() {
-        return Arrays.asList(
+    List<Class<?>> functions() {
+        return List.of(AsNodeFunc.class);
+    }
+
+    @Override
+    protected List<Class<?>> procedures() {
+        return List.of(
             BetweennessCentralityStreamProc.class,
             BetweennessCentralityWriteProc.class,
             BetweennessCentralityMutateProc.class,
@@ -42,7 +47,7 @@ class BetweennessCentralityDocTest extends DocTestBase {
     }
 
     @Override
-    String adocFile() {
+    protected String adocFile() {
         return "algorithms/betweenness-centrality/betweenness-centrality.adoc";
     }
 }
