@@ -20,18 +20,24 @@
 package org.neo4j.gds.doc;
 
 import org.neo4j.gds.catalog.GraphCreateProc;
+import org.neo4j.gds.functions.AsNodeFunc;
 import org.neo4j.gds.pagerank.EigenvectorMutateProc;
 import org.neo4j.gds.pagerank.EigenvectorStatsProc;
 import org.neo4j.gds.pagerank.EigenvectorStreamProc;
 import org.neo4j.gds.pagerank.EigenvectorWriteProc;
 
-import java.util.Arrays;
 import java.util.List;
 
 class EigenvectorCentralityDocTest extends DocTestBase {
+
     @Override
-    List<Class<?>> procedures() {
-        return Arrays.asList(
+    List<Class<?>> functions() {
+        return List.of(AsNodeFunc.class);
+    }
+
+    @Override
+    protected List<Class<?>> procedures() {
+        return List.of(
             EigenvectorStreamProc.class,
             EigenvectorWriteProc.class,
             EigenvectorMutateProc.class,
@@ -41,7 +47,7 @@ class EigenvectorCentralityDocTest extends DocTestBase {
     }
 
     @Override
-    String adocFile() {
+    protected String adocFile() {
         return "algorithms/eigenvector-centrality/eigenvector-centrality.adoc";
     }
 
