@@ -20,19 +20,24 @@
 package org.neo4j.gds.doc;
 
 import org.neo4j.gds.catalog.GraphCreateProc;
+import org.neo4j.gds.functions.AsNodeFunc;
 import org.neo4j.gds.louvain.LouvainMutateProc;
 import org.neo4j.gds.louvain.LouvainStatsProc;
 import org.neo4j.gds.louvain.LouvainStreamProc;
 import org.neo4j.gds.louvain.LouvainWriteProc;
 
-import java.util.Arrays;
 import java.util.List;
 
 class LouvainDocTest extends DocTestBase {
 
     @Override
-    List<Class<?>> procedures() {
-        return Arrays.asList(
+    List<Class<?>> functions() {
+        return List.of(AsNodeFunc.class);
+    }
+
+    @Override
+    protected List<Class<?>> procedures() {
+        return List.of(
             LouvainStreamProc.class,
             LouvainWriteProc.class,
             LouvainStatsProc.class,
@@ -42,7 +47,7 @@ class LouvainDocTest extends DocTestBase {
     }
 
     @Override
-    String adocFile() {
+    protected String adocFile() {
         return "algorithms/louvain/louvain.adoc";
     }
 
